<resources>
    <string name="app_name">Hanouti</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_now">Don\'t have an account? register now</string>
    <string name="recover_password">Recover password</string>
    <string name="recover">Recover</string>
    <string name="register">Register</string>
    <string name="fullname_hint">Full name</string>
    <string name="phone_hint">Phone</string>
    <string name="dayra_hint">Dayra</string>
    <string name="baladiya_hint">Baladiya</string>
    <string name="fulladdress_hint">Full address</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="register_seller_hint">Are you a seller? Register as seller</string>
    <string name="shopname_hint">Shop name</string>
    <string name="delivery_fee_hint">Delivery fee</string>
    <string name="location_needed">Location permission is needed !</string>
    <string name="wait">Please wait...</string>
    <string name="enable_location">Please turn on location !</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_required">Camera permission is needed !</string>
    <string name="storage_required">Storage access is needed !</string>
    <string name="register_as_seller">Register as a seller</string>
    <string name="enter_valid_name">Please enter a valid name !</string>
    <string name="enter_valid_shopname">Please enter the shop name !</string>
    <string name="enter_valid_phone">Please enter your phone number !</string>
    <string name="enter_valid_email">Please enter a valid email address !</string>
    <string name="short_password">Password must be at least 6 characters long</string>
    <string name="unmatched_passwords">Passwords do not match !</string>
    <string name="creating_account">Creating your account...</string>
    <string name="saving_info">Saving user information...</string>
    <string name="login_in">Login in...</string>
    <string name="enter_password">Please enter your password...</string>
    <string name="checking_user">Checking user info...</string>
    <string name="sending_instructions">Sending instructions to reset password to your email...</string>
    <string name="instructions_sent">Password reset instructions were sent to your email</string>
    <string name="logging_out">Logging out...</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update">Update</string>
    <string name="shop_open">Shop open</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="profile_updated">Profile updated</string>
    <string name="add_product">Add product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity e.g : g, kg</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discount_price">Discounted price</string>
    <string name="discount_price_note">Discounted note e.g: 10% OFF</string>
    <string name="product_category">Product category</string>
    <string name="enter_title">Please enter the product title ! Titles cannot be more than 30 characters</string>
    <string name="enter_desc">Description must be at least 10 characters long !</string>
    <string name="select_cat">Please select a category !</string>
    <string name="enter_valid_qte">Please enter a valid quantity !</string>
    <string name="enter_valid_price">Please enter a valid price !</string>
    <string name="enter_valid_price_discount">Please enter a valid discounted price !</string>
    <string name="valid_discount_price">Discount price cannot be greater than the original price !</string>
    <string name="adding_product">Adding product...</string>
    <string name="product_added">Product Added</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="search">Search...</string>
    <string name="showing_all">Showing All</string>
    <string name="loading_products">Loading products...</string>
    <string name="product_details">Product details</string>
    <string name="delete_product">Delete</string>
    <string name="delete_message">Are you sure you want to delete product</string>
    <string name="cancel">Cancel</string>
    <string name="product_deleted">Product was successfully deleted</string>
    <string name="edit_product">Edit product</string>
    <string name="save">Save</string>
    <string name="updating_product">Updating product...</string>
    <string name="product_updated">Product was successfully updated</string>
    <string name="shops">Shops</string>
    <string-array name="product_categories">
        <item name="phones_cat">Phones</item>
        <item name="vehicles_cat">Vehicles</item>
        <item name="immovable_cat">Immovable</item>
        <item name="electronic_cat">electronics and household appliances</item>
        <item name="computer_cat">Computers</item>
        <item name="beauty_cat">Fashion and beauty</item>
        <item name="supply_cat">Home and supplies</item>
        <item name="hobbies_cat">Leisure and entertainment</item>
        <item name="material_cat">Materials and equipment</item>
        <item name="voyage_cat">Voyages</item>
        <item name="service_cat">Services</item>
    </string-array>

    <string-array name="product_categories_all">
        <item>All</item>
        <item name="phones_cat">Phones</item>
        <item name="vehicles_cat">Vehicles</item>
        <item name="immovable_cat">Immovable</item>
        <item name="electronic_cat">electronics and household appliances</item>
        <item name="computer_cat">Computers</item>
        <item name="beauty_cat">Fashion and beauty</item>
        <item name="supply_cat">Home and supplies</item>
        <item name="hobbies_cat">Leisure and entertainment</item>
        <item name="material_cat">Materials and equipment</item>
        <item name="voyage_cat">Voyages</item>
        <item name="service_cat">Services</item>
    </string-array>
</resources>