<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_rec01"
            >


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_product"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/shopLogoIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_shopping_teal"
                app:c_border="true"
                app:c_border_color="@color/colorPrimary"
                app:c_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/titleET"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_title_grey"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:drawablePadding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shopLogoIV" />

            <EditText
                android:id="@+id/desctiptioET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_description_grey"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="10dp"
                android:drawablePadding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleET" />

            <EditText
                android:id="@+id/categoryET"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_category_grey"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="10dp"
                android:drawablePadding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desctiptioET" />

            <EditText
                android:maxLength="10"
                android:id="@+id/quantityET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_quantity_grey"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="textCapWords"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryET" />


            <EditText
                android:maxLength="12"
                android:id="@+id/priceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_price_grey"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantityET" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/discountSW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="10dp"
                android:text="@string/discount"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceET" />

            <EditText
                android:id="@+id/discountPriceET"
                android:maxLength="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_discount_grey"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/discount_price"
                android:inputType="numberDecimal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discountSW" />

            <EditText
                android:id="@+id/discountNoteET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rec2"
                android:drawableStart="@drawable/ic_note_grey"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/discount_price_note"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discountPriceET" />

            <Button
                android:id="@+id/editProductBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:minWidth="120dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discountNoteET" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>